# auth_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: .env.example  settings.py
src/: __main__.py  app.py  exceptions.py
src/api/v1/: __init__.py  router.py
src/api/v1/healthcheck/: readiness.py
src/api/v1/signature/: __init__.py  router.py
src/api/v1/signature/validate/: __init__.py  auth_data.py  init_data.py  router.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  start.py
src/bot/middlewares/: __init__.py  antiflood.py
src/bot/templates/: __init__.py  env.py
src/bot/templates/messages/examples/: start.jinja2.example
src/enums/: __init__.py
src/schemas/: __init__.py
src/schemas/validate_signature/: __init__.py  auth_data.py  init_data.py
tests/: conftest.py  test_app.py
